# vir_conto

./: .gitignore  .pre-commit-config.yaml  .pyrightconfig.json  AGENTS.md  README.md  api_docs.md  example.env  pyproject.toml  requirements.txt
docs/: api_docs.md  frappe_install.md  frappe_security.md
vir_conto/: commands.py  hooks.py  install.py  migrate.py  modules.txt  patches.txt  uninstall.py  util.py
vir_conto/charts/: insights_chart_v3.json  insights_dashboard_v3.json  insights_query_v3.json  insights_workbook.json
vir_conto/fixtures/: insights_chart_v3.json  insights_dashboard_v3.json  insights_query_v3.json  insights_workbook.json  module_profile.json  primary_key.json  role.json  role_profile.json
vir_conto/overrides/: insights_workbook.py
vir_conto/patches/: add_workbook_custom_fields.py  fill_ev_column.py  set_ev_field_with_data.py  set_ho_nap_field.py
vir_conto/tests/: insights_chart_v3.json  insights_dashboard_v3.json  test_commands.py  test_install.py  test_sync_charts.py
vir_conto/tests/test_imports/: insights_query_v3.json  insights_workbook.json
vir_conto/vir_conto/doctype/data_packet/: TEST-0001-24.LZH  TEST-0001.LZH  TEST-0002-25.LZH  data_packet.js  data_packet.json  data_packet.py  test_data_packet.py
vir_conto/vir_conto/doctype/primary_key/: primary_key.js  primary_key.json  primary_key.py  test_primary_key.py
vir_conto/vir_conto/doctype/raktnev/: raktnev.js  raktnev.json  raktnev.py  test_raktnev.py
vir_conto/vir_conto/doctype/tcsop/: tcsop.js  tcsop.json  tcsop.py  test_tcsop.py
vir_conto/vir_conto/doctype/tfocsop/: test_tfocsop.py  tfocsop.js  tfocsop.json  tfocsop.py
vir_conto/vir_conto/doctype/torzs/: test_torzs.py  torzs.js  torzs.json  torzs.py
vir_conto/vir_conto/doctype/vir_bolt/: test_vir_bolt.py  vir_bolt.js  vir_bolt.json  vir_bolt.py
vir_conto/vir_conto/doctype/vir_csop/: test_vir_csop.py  vir_csop.js  vir_csop.json  vir_csop.py
vir_conto/vir_conto/workspace/vir/: vir.json
(+4 files in other folders)
