[project]
name = "vir_conto"
authors = [
    { name = "Alex Nagy", email = "nagyalex003@gmail.com"}
]
description = "Business Intelligence for C-Conto"
requires-python = ">=3.10"
readme = "README.md"
dynamic = ["version"]
dependencies = [
    "dbf>=0.99.10",
    # "frappe~=15.0.0" # Installed and managed by bench.
    "dotenv>=0.9.9",
    "click>=8.2.1",
    "pypika>=0.48.9",
]

[build-system]
requires = ["flit_core >=3.4,<4"]
build-backend = "flit_core.buildapi"

# These dependencies are only installed when developer mode is enabled
[tool.bench.dev-dependencies]
# package_name = "~=1.1.0"

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
select = [
    "F",
    "E",
    "W",
    "I",
    "UP",
    "B",
]
ignore = [
    "B017", # assertRaises(Exception) - should be more specific
    "B018", # useless expression, not assigned to anything
    "B023", # function doesn't bind loop variable - will have last iteration's value
    "B904", # raise inside except without from
    "E101", # indentation contains mixed spaces and tabs
    "E402", # module level import not at top of file
    "E501", # line too long
    "E741", # ambiguous variable name
    "F401", # "unused" imports
    "F403", # can't detect undefined names from * import
    "F405", # can't detect undefined names from * import
    "F722", # syntax error in forward type annotation
    "W191", # indentation contains tabs
]
typing-modules = ["frappe.types.DF"]

[tool.ruff.format]
quote-style = "double"
indent-style = "tab"
docstring-code-format = true

[tool.basedpyright]
extraPaths = ["../frappe", "../insights"]

[tool.pyrefly]
project-includes = ["**/*"]
search-path = ["../frappe", "../insights"]
project-excludes = [
    "**/node_modules",
    "**/__pycache__",
    "**/*venv/**/*",
]

[tool.ty.environment]
extra-paths = ["../frappe", "../insights"]
